<?xml version="1.0"?>
<package format="2">
  <name>aist_phoxi_camera</name>
  <version>1.0.0</version>
  <description>The aist_phoxi_camera is a package that enables interfacing Photoneo Phoxi Scanner/Camera from ROS</description>

  <author>Toshio UESHIBA</author>
  <maintainer email="t.ueshiba@paist.go.jp">Toshio UESHIBA</maintainer>
  <license>BSD</license>
  <url>http://gitlab.com/o2as-aist/artros/aist_phoxi_camera</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>pluginlib</build_depend>build_depend>
  <exec_depend>pluginlib</exec_depend>exec_depend>

  <build_depend>nodelet</build_depend>build_depend>
  <exec_depend>nodelet</exec_depend>exec_depend>

  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>rospy</depend>
  <depend>ddynamic_reconfigure</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_description.xml"/>
  </export>

</package>
