<?xml version="1.0"?>
<package format="2">
  <name>ft300_wrench</name>
  <version>0.1.0</version>
  <description>This package reads the wrench data sensed by a FT300 sensor mounted on a UR robot and publishes it.</description>

  <maintainer email="FvDrigalski@gmail.com">Felix von Drigalski</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
