<?xml version="1.0"?>
<package format="2">
  <name>o2ac_dynamixel</name>
  <version>0.1.0</version>
  <description>The o2ac_dynamixel package</description>

  <maintainer email="artur.istvan.karoly@gmail.com">Artur Karoly</maintainer>
  <author email="artur.istvan.karoly@gmail.com">Artur Karoly</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>actionlib</exec_depend>

  <exec_depend>o2ac_msgs</exec_depend>
  <exec_depend>dynamixel_workbench_msgs</exec_depend>

</package>
