<?xml version="1.0"?>
<package format="2">
  <name>o2ac_fastening_tools</name>
  <version>1.1.0</version>
  <description>The o2ac_fastening_tools package</description>

  <maintainer email="kowa.yasushi@gmail.com">arayasu</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <build_depend>o2ac_msgs</build_depend>
  <exec_depend>o2ac_msgs</exec_depend>

</package>
