<?xml version="1.0"?>
<package format="2">
  <name>o2ac_pose_distribution_updater</name>
  <version>1.0.0</version>
  <description>The pose_distribution_updater package</description>

  <maintainer email="kazumi.kasaura@sinicx.com"></maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <build_depend>o2ac_msgs</build_depend>
  <exec_depend>o2ac_msgs</exec_depend>
  <build_depend>o2ac_skills</build_depend>
  <exec_depend>o2ac_skills</exec_depend>
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <depend>moveit_ros_planning</depend>
  <depend>moveit_ros_planning_interface</depend>

</package>
